--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,3 +27,26 @@ jobs:
         with:
           qiita-token: ${{ secrets.QIITA_TOKEN }}
           root: "."
+
+  pull_qiita_articles:
+    needs: publish_articles
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    if: ${{ success() }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - run: npm install -g qiita-cli
+      - name: Copy rename plugin
+        run: cp ./rename-plugin.js ~/.qiita-cli/plugins/
+      - run: npx qiita pull --plugins=rename-plugin
+      - uses: EndBug/add-and-commit@v9
+        with:
+          author_name: github-actions[bot]
+          author_email: 41898282+github-actions[bot]@users.noreply.github.com
+          message: '[CI]publish.pull_qiita_articles'
+          push: true
