--- a/.github/workflows/manual-qiita-sync.yml
+++ b/.github/workflows/manual-qiita-sync.yml
@@ -15,9 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+        uses: actions/setup-node
 
       - name: Install dependencies
         run: npm install
