public以下にmdファイルが追加・変更されたときだけ動くように修正

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,11 @@
-# Please set 'QIITA_TOKEN' secret to your repository
 name: Publish articles
 
 on:
   push:
     branches:
       - main
-      - master
+    paths:
+      - 'public/**/*.md'
   workflow_dispatch:
 
 permissions:
