--- a/.github/workflows/manual-qiita-sync.yml
+++ b/.github/workflows/manual-qiita-sync.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Node.js
-        uses: actions/setup-node
+        uses: actions/setup-node@v4
 
       - name: Install dependencies
         run: npm install
