--- a/.github/workflows/manual-qiita-sync.yml
+++ b/.github/workflows/manual-qiita-sync.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
+        with:
+          node-version: '21'
 
       - name: Install dependencies
         run: npm install
