--- a/.github/workflows/manual-qiita-sync.yml
+++ b/.github/workflows/manual-qiita-sync.yml
@@ -29,3 +29,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Sync Qiita articles"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
