--- a/.github/workflows/manual-qiita-sync.yml
+++ b/.github/workflows/manual-qiita-sync.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
     inputs:
       attention:
-        description: '（必須）コミットメッセージ（デフォルトはGitHub Actionsのタイトル）'
+        description: 'コミットメッセージ。Webエディタで編集した記事と内容を書くと良い'
         required: true
         default: '【手動実行】Qiita記事の最新版をとってきてGitHubに適用する'
 
@@ -30,6 +30,6 @@ jobs:
       - name: コミット＆プッシュ
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "コミットメッセージが空白？: ${{ github.event.inputs.attention }}"
+          commit_message: "${{ github.event.inputs.attention }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
