--- a/.github/workflows/manual-qiita-sync.yml
+++ b/.github/workflows/manual-qiita-sync.yml
@@ -2,6 +2,9 @@ name: 【手動実行】Qiita記事の最新版をとってきてGitHubに適用
 
 # 手動実行させる（記事を書いた後だとコンフリクトを起こすので、運用対処は必須）
 on:
+  # UTC時間で実行。JSTだと9時
+  schedule:
+    - cron: '0 0 * * *'
   workflow_dispatch:
     inputs:
       attention:
